--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!--For audio-->
     <br><figcaption><strong>THE SAMPLE AUDIO</strong></figcaption><br><br>
     <audio controls>
-        <source src="../html/waterfall.mp3">
+        <source src="../waterfall.mp3">
     </audio>
     </center>
 
@@ -146,22 +146,22 @@
         <!--For Beach-->
         <br><br><br><figcaption><strong>THE SAMPLE VIDEO OF BEACH</strong></figcaption><br><br>
         <video width="450" height="350" controls>
-            <source src="../HTML/beach.mp4" type="video/webm">
-            <source src="../HTML/beach.mp4" type="video/mp4">
+            <source src="../beach.mp4" type="video/webm">
+            <source src="../beach.mp4" type="video/mp4">
         </video>
         
         <!--For Coffee-->
         <br><br><br><figcaption><strong>THE SAMPLE VIDEO OF COFFEE</strong></figcaption><br><br>
         <video width="450" height="350" controls>
-            <source src="../HTML/coffee.mp4" type="video/webm">
-            <source src="../HTML/coffee.mp4" type="video/mp4">
+            <source src="../coffee.mp4" type="video/webm">
+            <source src="../coffee.mp4" type="video/mp4">
         </video>
         
         <!--For Flower-->
         <br><br><br><figcaption><strong>THE SAMPLE VIDEO OF FLOWER</strong></figcaption><br><br>
         <video width="450" height="350" controls>
-            <source src="../HTML/flower.mp4" type="video/webm">
-            <source src="../HTML/flower.mp4" type="video/mp4">
+            <source src="../flower.mp4" type="video/webm">
+            <source src="../flower.mp4" type="video/mp4">
         </video>
     </center>
 
